<resources>
    <string name="app_name">Fitcheck</string>

    <!-- Login/Signup -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_requirements">Must be at least 6 characters long</string>
    <string name="no_account_sign_up">Don\'t have an account? <u>Sign up</u></string>
    <string name="have_an_account_sign_in">Have an account? <u>Sign in</u></string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Navigation Strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_friends">Friends</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- Add Photo Activity -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_message">Fit Uploaded!</string>
    <string name="failure_message">"Upload Failed"</string>
    <string name="cancel_message">Upload Canceled</string>
    <string name="take_picture_message">"Capture your fit to upload!"</string>
    <string name="photo_title_label">Take your FitCheck for today!</string>
    <string name="tag_notes">Enter tags for your fit</string>
    <string name="detail_tag">Update tags for your fit</string>
    <string name="photo_button">Capture Fit!</string>
    <string name="location">Location</string>
    <string name="notes">Notes:</string>
    <string name="notes_hint">Enter notes about your fit here</string>
    <string name="tags">Tags:</string>

    <!-- Edit profile Activity -->
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_instructions">First and last name must not be empty</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_saved">Profile Saved</string>

    <!-- Detail Activity-->
    <string name="detail_title">Your Fit On:</string>
    <string name="done_button">Done</string>
    <string name="edit_button">Edit</string>
    <string name="fit_notes">No notes</string>

    <!-- Friend Feed Activity-->
    <string name="user">User:</string>
    <string name="unfriend">Unfriend</string>

    <!-- Preference Titles -->
    <string name="account_info_header">Account Info</string>
    <string name="notifications_header">Notifications</string>
    <string name="security_privacy_header">Security/Privacy</string>

    <!-- Account Info Preferences -->
    <string name="profile">Profile</string>
    <string name="profile_summary">Edit Profile</string>

    <!-- Notification Preferences -->
    <string name="daily_outfit_upload_reminder">Daily outfit upload reminder</string>
    <string name="daily_outfit_upload_reminder_summary">Get a daily update to upload outfit</string>
    <string name="daily_outfit_upload_reminder_time">Outfit upload reminder time</string>
    <string name="daily_notification_title">Upload your fit of the day</string>
    <string name="daily_notification_description">Don\'t forget to upload your outfit of the day if you haven\'t done so already!</string>

    <!-- Security/Privacy Preferences -->
    <string name="make_profile_public">Make profile public</string>
    <string name="make_profile_public_on_summary">Anyone can see your photos</string>
    <string name="make_profile_public_off_summary">Only friends can see your photos</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_summary">Reset your password</string>
    <string name="change_email">Change Email</string>
    <string name="change_email_summary">Change your email</string>
    <string name="logout">Log out</string>
    <string name="logout_summary">Log out of your account</string>

    <!--    Reset Password  -->
    <string name="current_password">Current Password</string>
    <string name="reset_password_instructions">To change your password, you must enter your current password and a new one. Password must be at least 6 characters long.</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>

    <!--    Change Email  -->
    <string name="change_email_instructions">To change your email, you must enter your current email and password along with your new email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>

    <!--    Misc  -->
    <string name="time_formatter_pattern">hh:mm a</string>

</resources>