<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account_info_header">
        <Preference
            app:key="@string/profile"
            app:title="@string/profile"
            app:summary="@string/profile_summary"
            app:fragment="com.ui.settings.ProfileFragment" />
<!--        This could be a activity if needed (same applies to others)     -->
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications_header">
        <SwitchPreferenceCompat
            app:key="@string/daily_outfit_upload_reminder"
            app:title="@string/daily_outfit_upload_reminder"
            app:summary="@string/daily_outfit_upload_reminder_summary">
        </SwitchPreferenceCompat>
        <Preference
            app:key="@string/daily_outfit_upload_reminder_time"
            app:title="@string/daily_outfit_upload_reminder_time"
            app:summary="@string/not_set">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_privacy_header">

        <SwitchPreferenceCompat
            app:key="@string/make_profile_public"
            app:title="@string/make_profile_public">
        </SwitchPreferenceCompat>

        <Preference
            app:key="@string/reset_password"
            app:title="@string/reset_password"
            app:summary="@string/reset_password_summary">
            <intent
                android:targetPackage="com.cmpt362.fitcheck"
                android:targetClass="com.cmpt362.fitcheck.ui.settings.ResetPasswordActivity">
            </intent>
        </Preference>

        <Preference
            app:key="@string/change_email"
            app:title="@string/change_email"
            app:summary="@string/change_email_summary">
            <intent
                android:targetPackage="com.cmpt362.fitcheck"
                android:targetClass="com.cmpt362.fitcheck.ui.settings.ChangeEmailActivity">
            </intent>
        </Preference>

        <Preference
            app:key="@string/logout"
            app:summary="@string/logout_summary"
            app:title="@string/logout" />

    </PreferenceCategory>

</PreferenceScreen>