<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:labelVisibilityMode="labeled">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>