<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".AddPhotoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textStyle="bold|italic"
                android:text="@string/photo_title_label">
            </TextView>

            <ImageView
                android:id="@+id/outfitImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/splash_logo">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/location">
            </TextView>

            <Button
                android:id="@+id/btnCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:onClick="onCapture"
                android:text="@string/photo_button" >
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/notes">
        </TextView>

        <EditText
            android:id="@+id/notesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/tags">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:onClick="onSaveUpload"
                android:text="@string/save_button" >
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="onCancelUpload"
                android:text="@string/cancel_button" >
            </Button>
        </LinearLayout>

    </LinearLayout>
</ScrollView>