<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignUpActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!--        Some kind of logo here-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/sign_in_up_text_size"
            android:textColor="@color/black"
            android:layout_margin="@dimen/sign_in_up_text_margin">
        </TextView>

        <EditText
            android:layout_width="@dimen/sign_in_fields_width"
            android:layout_height="wrap_content"
            android:id="@+id/signUpFirstName"
            android:layout_margin="@dimen/sign_in_up_text_margin"
            android:hint="@string/first_name"
            android:inputType="text"
            android:autofillHints="name">
        </EditText>

        <EditText
            android:layout_width="@dimen/sign_in_fields_width"
            android:layout_height="wrap_content"
            android:id="@+id/signUpLastName"
            android:layout_margin="@dimen/sign_in_up_text_margin"
            android:hint="@string/last_name"
            android:inputType="text"
            android:autofillHints="name">
        </EditText>

        <EditText
            android:layout_width="@dimen/sign_in_fields_width"
            android:layout_height="wrap_content"
            android:id="@+id/signUpEmail"
            android:layout_margin="@dimen/sign_in_up_text_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress">
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_up_text_margin"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="@dimen/sign_in_fields_width"
                android:layout_height="wrap_content"
                android:id="@+id/signUpPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_requirements">
            </TextView>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:onClick="signUpUser"
            android:enabled="false"
            android:layout_margin="@dimen/sign_in_up_text_margin"
            android:text="@string/sign_up">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountSignIn"
            android:text="@string/have_an_account_sign_in"
            android:layout_margin="@dimen/sign_in_up_text_margin">
        </TextView>

    </LinearLayout>

</ScrollView>