<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ui.calendar.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textStyle="bold|italic"
                android:text="@string/detail_title">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/dateTextView"
                android:textStyle="bold">
            </TextView>

            <ImageView
                android:id="@+id/outfitImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/splash_logo">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/location">
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/notes">
        </TextView>

        <TextView
            android:id="@+id/notesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit_notes"
            android:lines="4">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/tags">
        </TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/detailChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Entry">
        </com.google.android.material.chip.ChipGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:onClick="onDone"
                android:text="@string/done_button" >
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="onEdit"
                android:text="@string/edit_button" >
            </Button>
        </LinearLayout>

    </LinearLayout>
</ScrollView>